# gnews-mcp-server

./: .cursorrules  .cursorules  .env.example  README.md  main.py  pyproject.toml  test_cases.json  test_server.py
gnews_mcp_server/: __init__.py  handlers.py  server.py  tools.json
