[project]
name = "gnews-mcp-server"
version = "0.1.0"
description = "GNews API MCP server for fetching news articles and headlines"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
gnews-server = "gnews_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/gnews-mcp-server"
Repository = "https://github.com/yourusername/gnews-mcp-server"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gnews_mcp_server"]
force-include = { "gnews_mcp_server/tools.json" = "gnews_mcp_server/tools.json" }

[tool.hatch.build.targets.sdist]
include = [
  "gnews_mcp_server/**",
  "README.md",
  "LICENSE",
]